--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tronweb": "^5.3.2",
-    "buffer": "^6.0.3"
+    "tronweb": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
