--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@walletconnect/types": "^2.21.8",
     "@walletconnect/utils": "^2.21.8",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "process": "^0.11.10",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tronweb": "^5.3.2"
+    "stream-browserify": "^3.0.0",
+    "tronweb": "^5.3.2",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
